fix: corrected translation of passenger - case correction

--- a/t-air-search-api-decorator.html
+++ b/t-air-search-api-decorator.html
@@ -38,7 +38,7 @@
         _buildData: function(data) {
             var query = {
                 "productType": "Flight",
-                "Passengers": [
+                "passengers": [
                     {
                         "quantity": data.adult,
                         "type": "Adult",
